--- a/섹션11_종합예제_전진_3D_스크롤/css/yj_style.css
+++ b/섹션11_종합예제_전진_3D_스크롤/css/yj_style.css
@@ -6,3 +6,68 @@ body {
     background: #fff000;
     transition: background .5s;
 }
+
+.world {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  perspective: 1000px; /* 원근 적용 */
+}
+
+.stage {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  transform-style: preserve-3d; /* 하위 요소에도 3D 효과를 잘 적용하기 위해 중간 요소에 설정해준다. */
+}
+
+.house {
+  width: 100vw;
+  height: 100vh;
+  transform: translateZ(-490vw);
+  transform-style: preserve-3d;
+}
+
+.wall {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(255, 255, 255, 0.8);
+}
+
+.wall-left {
+  /* left: -500vw; */
+  width: 1000vw;
+  background-color: #f8f8f8;
+  transform: rotateY(90deg) translateZ(-500vw);
+}
+
+.wall-right {
+  /* left: -500vw; */
+  width: 1000vw;
+  background-color: #f8f8f8;
+  /* transform: rotateY(90deg) translateZ(100vw); */
+  transform: rotateY(90deg) translateZ(-400vw);
+}
+
+.wall-front-a { transform: translateZ(300vw); }
+.wall-front-b { transform: translateZ(50vw); }
+.wall-front-c { transform: translateZ(-200vw); }
+.wall-front-d { transform: translateZ(-500vw); }
+
+.wall-title {
+  font-size: 5rem;
+}
+
+.wall-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
