--- a/Intensive/yj_practice/css/main.css
+++ b/Intensive/yj_practice/css/main.css
@@ -24,6 +24,7 @@ a {
 /* global-nav */
 .global-nav {
 	height: 44px;
+	padding: 0 1rem;
 }
 
 .global-nav-link, .local-nav-link {
@@ -32,6 +33,7 @@ a {
 	max-width: 1000px;
 	height: 100%;
 	margin: 0 auto;
+	padding: 0 1rem;
 }
 
 .global-nav-link {
@@ -56,4 +58,134 @@ a {
 
 .local-nav-link a:not(.product-name) {
 	margin-left: 2em;
+}
+
+/* scroll-section */
+.scroll-section {
+	padding-top: 50vh;
+}
+
+#scroll-section-0 h1 {
+	font-size: 4rem; /* 14px * 4 */
+	text-align: center;
+}
+
+.main-message {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 5px 0;
+	height: 3em;
+	font-size: 2.5rem;
+}
+
+.main-message p {
+	font-weight: bold;
+	text-align: center;
+	line-height: 1.2;
+}
+
+.main-message small {
+	display: block;
+	margin-bottom: 0.5em;
+	font-size: 1.2rem;
+}
+
+#scroll-section-2 .main-message {
+	font-size: 3.5rem;
+}
+
+.description {
+	max-width: 1000px;
+	margin: 0 auto;
+	padding: 0 1rem;
+	font-size: 1.2rem;
+	color: #888888;
+}
+
+.description strong {
+	float: left;
+	margin-right: 0.2em;
+	font-size: 3rem;
+	color: rgb(29, 29, 31);
+}
+
+.desc-message {
+	width: 50%;
+	font-weight: bold;
+}
+
+.pin {
+	width: 1px;
+	height: 100px;
+	background: #000000;
+}
+
+.mid-message {
+	max-width: 1000px;
+	margin: 0 auto;
+	padding: 0 1rem;
+	font-size: 2rem;
+	color: #888888;
+}
+
+.mid-message strong {
+	color: rgb(29, 29, 31);
+}
+
+.canvas-caption {
+	max-width: 1000px;
+	margin: 0 auto;
+	padding: 0 1rem;
+	font-size: 1.2rem;
+	color: #888888;
+}
+
+/* footer */
+.footer {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 7rem;
+	color: #FFFFFF;
+	background-color: darkorange;
+}
+
+/* media */
+@media (min-width: 1024px) {
+	#scroll-section-0 h1 {
+		font-size: 9vw; /* window size의 9% */
+	}
+
+	.main-message {
+		font-size: 4vw;
+	}
+
+	.description {
+		font-size: 2rem;
+	}
+	
+	.description strong {
+		font-size: 6rem;
+	}
+
+	#scroll-section-2 .main-message {
+		font-size: 6vw;
+	}
+
+	.main-message small {
+		font-size: 1.5vw;
+	}
+
+	.desc-message {
+		width: 20%;
+	}
+
+	.mid-message {
+		font-size: 4vw; /* 창 크기의 4%라서 창의 사이즈가 변경될 때마다 사이즈가 변화한다. */
+	}
+
+	.canvas-caption {
+		font-size: 2rem; /* 고정값: html font-size의 4배 */ /* 설명글은 보통 사이즈의 변화가 크게 달라지지 않기 때문에 rem으로 한 것이다. */
+	}
 }
